support creating transactions with the minimum relay fee rate configured by the user or set by the connected server